<?xml version="1.0" encoding="utf-8"?>
<!-- Organizer Navigation Menu -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item-->
<!--        android:id="@+id/navigation_admin_profile"-->
<!--        android:icon="@drawable/ic_profile"-->
<!--        android:title="@string/title_profile" />-->

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_browse_users"
        android:icon="@drawable/ic_person"
        android:title="@string/browse_users" />

    <item
        android:id="@+id/navigation_notification_log"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notification_log"
        android:visible="false" />

</menu>
