<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/second_chance_notification_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Event Name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_declined_event"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_chance_notification"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
            android:layout_marginBottom="16dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                style="?attr/materialButtonStyle"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>