<?xml version="1.0" encoding="utf-8"?>
<!-- Organizer Navigation Graph -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Organizer Fragments -->

    <fragment
        android:id="@+id/navigation_organizer_profile"
        android:name="com.example.cmpuzz_events.ui.organizerdialogs.OrganizerProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_organizer_profile" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cmpuzz_events.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_to_event_details"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cmpuzz_events.ui.organizer.CreateEventFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/create_event_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cmpuzz_events.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- Admin-only: Notification Log -->
    <fragment
        android:id="@+id/navigation_notification_log"
        android:name="com.example.cmpuzz_events.ui.admin.NotificationLogFragment"
        android:label="@string/title_notification_log"
        tools:layout="@layout/fragment_notification_log" />

    <!-- User Fragments -->
    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.cmpuzz_events.ui.browse.BrowseEventsFragment"
        android:label="Browse Events"
        tools:layout="@layout/fragment_browse_events">
        <action
            android:id="@+id/action_browse_to_event_details"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cmpuzz_events.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_event_details"
            app:destination="@id/eventDetailsFragment" />
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profile_to_guidelines"
            app:destination="@id/guidelinesFragment" />
    </fragment>

    <!-- Event Details Fragment -->
    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.example.cmpuzz_events.ui.event.EventDetailsFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_event_details">
        <argument
            android:name="eventId"
            app:argType="string" />
        <action
            android:id="@+id/action_to_event_action_menu"
            app:destination="@id/eventActionMenuFragment" />
        <action
            android:id="@+id/action_event_details_to_view_all_entrants"
            app:destination="@id/viewAllEntrantsFragment" />
        <action
            android:id="@+id/action_event_details_to_event_map"
            app:destination="@id/eventMapFragment" />
    </fragment>

    <!-- Event Map Fragment -->
    <fragment
        android:id="@+id/eventMapFragment"
        android:name="com.example.cmpuzz_events.ui.event.EventMapFragment"
        android:label="Event Map"
        tools:layout="@layout/fragment_event_map">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <!-- Event Action Menu Fragment -->
    <fragment
        android:id="@+id/eventActionMenuFragment"
        android:name="com.example.cmpuzz_events.ui.event.EventActionMenuFragment"
        android:label="Action Menu"
        tools:layout="@layout/fragment_event_action_menu">
        <argument
            android:name="eventId"
            app:argType="string" />
        <action
            android:id="@+id/action_to_view_entrants"
            app:destination="@id/viewEntrantsFragment" />
    </fragment>

    <!-- View Entrants Fragment -->
    <fragment
        android:id="@+id/viewEntrantsFragment"
        android:name="com.example.cmpuzz_events.ui.event.ViewEntrantsFragment"
        android:label="View Entrants"
        tools:layout="@layout/fragment_view_entrants">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <!-- View All Entrants Fragment (for users) -->
    <fragment
        android:id="@+id/viewAllEntrantsFragment"
        android:name="com.example.cmpuzz_events.ui.event.ViewAllEntrantsFragment"
        android:label="All Entrants"
        tools:layout="@layout/fragment_view_all_entrants">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <!-- Settings Fragment -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.cmpuzz_events.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <!-- History Fragment -->
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.cmpuzz_events.ui.history.EventHistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <!-- Guidelines Fragment -->
    <fragment
        android:id="@+id/guidelinesFragment"
        android:name="com.example.cmpuzz_events.ui.profile.GuidelinesFragment"
        android:label="fragment_guidelines"
        tools:layout="@layout/fragment_guidelines" />

</navigation>
