<?xml version="1.0" encoding="utf-8"?>
<!-- Organizer Navigation Graph -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Organizer Fragments -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cmpuzz_events.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_to_event_details"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cmpuzz_events.ui.organizer.CreateEventFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/create_event_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cmpuzz_events.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- User Fragments -->
    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.cmpuzz_events.ui.browse.BrowseEventsFragment"
        android:label="Browse Events"
        tools:layout="@layout/fragment_browse_events" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cmpuzz_events.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Event Details Fragment -->
    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.example.cmpuzz_events.ui.event.EventDetailsFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_event_details">
        <argument
            android:name="eventId"
            app:argType="string" />
        <action
            android:id="@+id/action_to_event_action_menu"
            app:destination="@id/eventActionMenuFragment" />
    </fragment>

    <!-- Event Action Menu Fragment -->
    <fragment
        android:id="@+id/eventActionMenuFragment"
        android:name="com.example.cmpuzz_events.ui.event.EventActionMenuFragment"
        android:label="Action Menu"
        tools:layout="@layout/fragment_event_action_menu">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
</navigation>
